# sinc-pro-voice-widget

./: .gitignore  CHANGELOG.md  FUTURE_FEATURES.md  LICENSE  README.md  SINC_PRO.spec  ocr_translation.py  package-lock.json  package.json  patch_librs.py  playwright.config.js  screen_translator.py  tailwind.config.js  temp_ocr.json  temp_script_0.js  temp_script_test.js  temp_widget.txt  translation_engine.py  voice_assistant.py  voice_server.py  voice_settings.json  voice_widget.py
.agents/skills/github-readme-helper/: SKILL.md
.agents/skills/github-release-helper/: SKILL.md
docs/: OCR_SPLITTER.md  PROJECT_STATE.md  ROADMAP.md  decisions.md  updater.json
restored_from_my_chat/src/: capsule.html  index.html  ocr.html  ocr.js  tts.js  voice-core.js  widget.html
restored_from_my_chat/src-tauri/src/: lib.rs
src/: capsule.html  index.html  input.css  main.js  mic.html  ocr.html  ocr.js  prompt.html  result.html  styles.css  tts-widget.js  tts.js  voice-core.js  widget.html  widget.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  lib.rs.orig  translator.rs
test-results/sinc-pro-DOM-—-критичные-элементы-вкладки-tabs-существуют/: error-context.md
tests/: sinc-pro.spec.js
