[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.4", features = ["json"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["clock"] }
tauri-plugin-global-shortcut = "2.3.2"
tokio = { version = "1", features = ["full"] }
raw-window-handle = "0.6"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
winapi = { version = "0.3.9", features = ["wingdi", "winuser"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
