[package]
name = "tauri-app"
version = "3.5.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.4", features = ["json"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["clock"] }
tauri-plugin-global-shortcut = "2.3.2"
tokio = { version = "1", features = ["full"] }
raw-window-handle = "0.6"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
winapi = { version = "0.3.9", features = ["wingdi", "winuser"] }
regex = "1.12.3"
lazy_static = "1.5.0"
urlencoding = "2.1.3"
xcap = "0.9.4"
image = { version = "0.25.10", default-features = false, features = ["png"] }
windows = { version = "0.58", features = ["Foundation", "Foundation_Collections", "Media_Ocr", "Graphics_Imaging", "Storage_Streams", "Globalization"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
